add: product services, controllers and routes
